// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`knex_migrations_v2 table schema 1`] = `
Object {
  "batch": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "id": Object {
    "defaultValue": "nextval('knex_migrations_v2_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "migration_time": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "name": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
}
`;

exports[`knex_migrations_v2_lock table schema 1`] = `
Object {
  "index": Object {
    "defaultValue": "nextval('knex_migrations_v2_lock_index_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "is_locked": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;

exports[`should list all tables 1`] = `
Array [
  "access_tokens",
  "api_logs",
  "city",
  "commentaires",
  "departements",
  "direction",
  "editor_token_requests",
  "editors",
  "enquete_reponses",
  "enquete_reponses_activite",
  "enquete_reponses_agrements_formations",
  "enquete_reponses_financement",
  "enquete_reponses_informations_mandataire",
  "enquete_reponses_modalites_exercice",
  "enquete_reponses_populations",
  "enquete_reponses_prepose_personel_formation",
  "enquete_reponses_prepose_prestations_sociales",
  "enquete_reponses_prestations_sociales",
  "enquete_reponses_service_informations",
  "enquete_reponses_service_personnel_formation",
  "enquete_services",
  "enquetes",
  "etablissements",
  "geolocalisation_code_postal",
  "knex_migrations_v2",
  "knex_migrations_v2_lock",
  "lb_departements",
  "lb_structures",
  "lb_tribunaux",
  "lb_users",
  "logs_data",
  "magistrat",
  "mandataires",
  "mesure_etat",
  "mesure_ressources",
  "mesures",
  "regions",
  "role",
  "satisfaction_campaign_answers",
  "satisfaction_campaigns",
  "service_antenne",
  "service_member_invitations",
  "service_members",
  "service_tis",
  "services",
  "tis",
  "user_role",
  "user_tis",
  "users",
  "view_department_availability",
  "view_indicateur_inscrit",
  "view_indicateur_login",
  "view_indicateur_satisfaction_campaign",
  "view_mesure_gestionnaire",
  "view_mesure_gestionnaire_tis",
]
`;
